Added support for local dynamodb
